--- a/source/less/blocks/dietary__info.less
+++ b/source/less/blocks/dietary__info.less
@@ -5,6 +5,6 @@
   padding-bottom: 25px;
   font-size: 14px;
   font-weight: lighter;
-  font-family: 'Arial';
+  font-family: Arial, sans-serif;
   color: #444444;
 }
