--- a/source/less/blocks/form__label.less
+++ b/source/less/blocks/form__label.less
@@ -3,5 +3,5 @@
   font-size: 16px;
   font-weight: lighter;
   text-transform: uppercase;
-  padding: 15px 0px;
+  padding: 15px 0px; /* no unit */
 }
