--- a/source/less/blocks/form__label.less
+++ b/source/less/blocks/form__label.less
@@ -3,5 +3,6 @@
   font-size: 16px;
   font-weight: lighter;
   text-transform: uppercase;
-  padding: 15px 0px; /* no unit */
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
