--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,5 +1,4 @@
 @import "../fonts/fonts.less";
-//index.html
 @import "./blocks/visually-hidden.less";
 @import "./blocks/page-header.less";
 @import "./blocks/page-header__top-level.less";
@@ -37,7 +36,6 @@
 @import "./blocks/copyright.less";
 @import "./blocks/copyright__link.less";
 @import "./blocks/copyright__logo.less";
-//form.html
 @import "./blocks/main-nav.less";
 @import "./blocks/main-nav__logo.less";
 @import "./blocks/main-nav__icon--logo.less";
@@ -61,7 +59,6 @@
 @import "./blocks/form__action.less";
 @import "./blocks/form__legend.less";
 @import "./blocks/contacts__info--form.less";
-//catalog.html
 @import "./blocks/page-catalog.less";
 @import "./blocks/page-catalog__products-list.less";
 @import "./blocks/catalog-item-container.less";
@@ -82,8 +79,7 @@
 @import "./blocks/addition-item__button.less";
 @import "./blocks/special-offer.less";
 @import "./blocks/special-offer__description.less";
-//
 body {
-  font-family: 'CatEnergyFonts';
+  font-family: "CatEnergyFonts";
   width: 320px;
 }
