All errors were fixed

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -81,6 +81,6 @@
 @import "./blocks/special-offer__description.less";
 
 body {
-  font-family: "CatEnergyFonts";
+  font-family: "CatEnergyFonts", "Arial", sans-serif;
   width: 320px;
 }
