--- a/source/less/blocks/feature.less
+++ b/source/less/blocks/feature.less
@@ -1,7 +1,7 @@
 .feature {
   padding-left: 80px;
   margin-bottom: 20px;
-  font-family: Arial, sans-serif;
+  font-family: "Arial", "Helvetica", sans-serif;
   font-weight: lighter;
   font-size: 14px;
   color: #444444;
