--- a/source/less/blocks/proof__case-description.less
+++ b/source/less/blocks/proof__case-description.less
@@ -1,6 +1,6 @@
 .proof__case-description {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: "Arial", "Helvetica", sans-serif;
   font-size: 12px;
   font-weight: lighter;
   color: #444444;
