--- a/source/less/blocks/proof__text.less
+++ b/source/less/blocks/proof__text.less
@@ -1,5 +1,5 @@
 .proof__text {
-  font-family: Arial, sans-serif;
+  font-family: "Arial", "Helvetica", sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: lighter;
