--- a/source/less/blocks/special-offer.less
+++ b/source/less/blocks/special-offer.less
@@ -2,5 +2,5 @@
   background-image: url("../img/gift-photo-mobile@1x.jpg");
   width: 280px;
   height: 288px;
-  margin-bottom: 36px
+  margin-bottom: 36px;
 }
