All error-moments were fixed

--- a/source/less/blocks/addition-item.less
+++ b/source/less/blocks/addition-item.less
@@ -1,3 +1,10 @@
+.addition-item__button {
+  margin: 0;
+  width: 280px;
+  padding-left: 108px;
+  padding-right: 108px;
+}
+
 .addition-item__description {
   display: flex;
   justify-content: space-between;
