--- a/source/less/blocks/page-catalog.less
+++ b/source/less/blocks/page-catalog.less
@@ -1,6 +1,14 @@
-@import "../mixins.less";
-
 .page-catalog {
   padding: 0;
   .centerer();
+}
+
+.page-catalog__item {
+  margin-bottom: 50px;
+}
+
+.page-catalog__products-list {
+  list-style: none;
+  padding: 0;
+  margin-bottom: 25px;
 }
