--- a/source/less/blocks/proof.less
+++ b/source/less/blocks/proof.less
@@ -3,3 +3,40 @@
   padding-left: 20px;
   padding-top: 33px;
 }
+
+.proof__title {
+  font-size: 36px;
+  font-style: normal;
+  font-weight: lighter;
+}
+
+.proof__text {
+  font-family: "Arial", "Helvetica", sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: lighter;
+  color: #444444;
+}
+
+.proof__group {
+  display: flex;
+  justify-content: space-around;
+}
+
+.proof__case-number {
+  font-size: 24px;
+  font-weight: lighter;
+}
+
+.proof__case-item {
+  display: flex;
+  flex-direction: column;
+}
+
+.proof__case-description {
+  margin: 0;
+  font-family: "Arial", "Helvetica", sans-serif;
+  font-size: 12px;
+  font-weight: lighter;
+  color: #444444;
+}
