--- a/source/less/blocks/special-offer.less
+++ b/source/less/blocks/special-offer.less
@@ -4,3 +4,10 @@
   height: 288px;
   margin-bottom: 36px;
 }
+
+.special-offer__description {
+  color: white;
+  width: 165px;
+  padding-top: 190px;
+  padding-left: 66px;
+}
