--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -2,3 +2,13 @@
   display: flex;
   justify-content: space-between;
 }
+
+.copyright__link {
+  color: #444444;
+  text-decoration: none;
+}
+
+.copyright__logo {
+  width: 28px;
+  height: 36px;
+}
