--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -2,3 +2,19 @@
   display: flex;
   justify-content: space-around;
 }
+
+.main-nav__icon--logo {
+  margin-top: 13px;
+  width: 34px;
+  height: 38px;
+}
+
+.main-nav__icon--text {
+  margin-top: 25px;
+  width: 103px;
+  height: 19px;
+}
+
+.main-nav__logo {
+  text-decoration: none;
+}
