--- a/source/less/blocks/slogan.less
+++ b/source/less/blocks/slogan.less
@@ -6,3 +6,26 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.slogan__title {
+  font-size: 36px;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 40px;
+  padding-left: 36px;
+  padding-right: 36px;
+  padding-top: 40px;
+  color: white;
+}
+
+.slogan__reason {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 18px;
+  padding-left: 59px;
+  padding-right: 59px;
+  margin-top: 18px;
+  color: white;
+  text-transform: uppercase;
+}
