The grids were made

--- a/source/less/blocks/food-packaging.less
+++ b/source/less/blocks/food-packaging.less
@@ -1,3 +1,10 @@
 .food-packaging {
-  margin-left: 20px;
+  margin-top: -70px;
+  text-align: center;
+  background-size: cover;
+
+  @media screen and (min-width: @tablet-width) {
+    margin-top: -200px;
+    margin-left: 180px;
+  }
 }
