--- a/source/less/blocks/text-group.less
+++ b/source/less/blocks/text-group.less
@@ -1,4 +1,13 @@
 .text-group {
   display: flex;
   margin-bottom: 10px;
+  justify-content: space-between;
+}
+
+.text-group__value {
+  display: block;
+}
+
+.text-group__name {
+  margin-right: 10px;
 }
