--- a/source/less/blocks/toggle-control.less
+++ b/source/less/blocks/toggle-control.less
@@ -1,6 +1,17 @@
 .toggle-control {
+  position: absolute;
   font-size: 16px;
   text-transform: uppercase;
   background-color: inherit;
   border-style: none;
+}
+
+.toggle-control--left {
+  margin-left: -80px;
+  margin-top: -10px;
+}
+
+.toggle-control--right {
+  margin-left: 100px;
+  margin-top: -10px;
 }
