--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -1,8 +1,17 @@
 .centerer() {
   margin-left: 20px;
+  margin-right: 20px;
 }
 
 .form-centerer() {
   margin-left: 20px;
   margin-right: 20px;
+}
+
+.container() {
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  outline: 1px solid blue;
 }
