--- a/source/less/blocks/catalog-item.less
+++ b/source/less/blocks/catalog-item.less
@@ -1,12 +1,39 @@
 .catalog-item__button {
-  margin: 0;
-  width: 280px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   padding-left: 108px;
   padding-right: 108px;
+  text-align: center;
+
+  @media (min-width: @tablet-width) {
+    text-align: center;
+    width: 230px;
+    margin-left: 40px;
+    padding-left: 94px;
+    padding-right: 94px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 175px;
+    padding-left: 52px;
+    padding-right: 52px;
+  }
 }
 
 .catalog-item__description {
   font-family: "Arial", "Helvetica", sans-serif;
+  width: 140px;
+}
+
+.catalog-item__title {
+  padding-right: 50px;
+}
+
+.catalog-item-container {
+  display: flex;
+  @media (min-width: @tablet-width) {
+    display: block;
+  }
 }
 
 .catalog-item__link {
@@ -17,4 +44,15 @@
 
 .catalog-item__text {
   margin-bottom: 23px;
+  @media (min-width: @tablet-width) {
+    width: 240px;
+    padding-left: 40px;
+    padding-right: 40px;
+    margin-bottom: 35px;
+  }
+}
+
+.catalog-item__info {
+    width: 165px;
+    margin-bottom: 35px;
 }
