--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,25 +1,54 @@
 .contacts__title {
-  padding-top: 31px;
+  padding-top: 14px;
   text-transform: uppercase;
+  width: 140px;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .contacts__map {
-  width: 320px;
+  width: 100%;
   height: 363px;
+  @media (min-width: @tablet-width) {
+    height: 417px;
+  }
+}
+
+.contacts {
+  @media (min-width: @desktop-width) {
+    position: relative;
+  }
 }
 
 .contacts__info {
-  background-color: white;
   display: flex;
-  margin-bottom: 25px;
+  justify-content: space-between;
+  align-items: baseline;
+  width: 280px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 14px;
+  padding-bottom: 12px;
+  .container();
+  @media (min-width: @tablet-width) {
+    width: 708px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+  @media (min-width: @desktop-width) {
+    position: absolute;
+    width: 430px;
+    background-color: white;
+    top: 145px;
+    left: 50%;
+    margin-left: -605px;
+  }
 }
-
-.contacts__info--form {
-  background-color: #f2f2f2;
-}
-
 
 .contacts__address {
-  padding-top: 31px;
+  width: 140px;
+  padding-top: 14px;
   color: #444444;
 }
