--- a/source/less/blocks/dietary.less
+++ b/source/less/blocks/dietary.less
@@ -1,9 +1,12 @@
 .dietary {
   .centerer();
-  width: 293px;
-  height: 265px;
   background-color: #f2f2f2;
+
+  @media screen and (min-width: @tablet-width) {
+    padding-right: 100px;
+  }
 }
+
 
 .dietary__link-to {
   .centerer();
@@ -13,6 +16,7 @@
 }
 
 .dietary__title {
+  width: 100%;
   padding-left: 80px;
   text-transform: uppercase;
   font-size: 24px;
