--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -1,8 +1,77 @@
 .features {
   .centerer();
-  margin-bottom: 42px;
+  margin-bottom: 45px;
+  width: 280px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+
+  @media (min-width: @tablet-width) {
+    width: 708px;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1220px;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+}
+
+.features__item {
+  padding-left: 80px;
+  margin-bottom: 20px;
+  font-family: "Arial", "Helvetica", sans-serif;
+  font-weight: lighter;
+  font-size: 14px;
+  color: #444444;
+  padding-bottom: 5px;
+  outline: 1px dotted green;
+
+  @media screen and (min-width: @tablet-width) {
+    position: relative;
+    padding-top: 115px;
+    padding-right: 100px;
+    padding-bottom: 103px;
+    padding-left: 0px;
+    margin-bottom: 40px;
+    width: 228px;
+    outline: 1px dotted blue;
+    flex-shrink: 3;
+
+    &:before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 80px;
+      height: 80px;
+      background-color: #68b738;
+    }
+  }
+
+  @media screen and (min-width: @desktop-width) {
+    padding-right: 0px;
+  }
+
 }
 
 .features__title {
   margin-bottom: 40px;
+  @media screen and (min-width: @tablet-width) {
+    margin-top: 40px;
+    margin-bottom: 75px;
+    font-size: 60px;
+    line-height: 60px;
+  }
+}
+
+.features__items {
+  @media screen and (min-width: @tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
 }
