--- a/source/less/blocks/food-price.less
+++ b/source/less/blocks/food-price.less
@@ -3,4 +3,15 @@
   font-weight: lighter;
   text-transform: uppercase;
   margin-left: 50px;
+  @media (min-width: @tablet-width) {
+    position: absolute;
+    right: 30px;
+    bottom: 0;
+  }
+  @media (min-width: @desktop-width) {
+    position: static;
+    margin-left: 0;
+    width: 360px;
+    text-align: left;
+  }
 }
