--- a/source/less/blocks/more.less
+++ b/source/less/blocks/more.less
@@ -1,5 +1,15 @@
-.more {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.more__promo-title {
+  margin-bottom: 7px;
+  font-size: 16px;
+  line-height: 20px;
+  color: #111111;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.more__proviso {
+  margin-bottom: 20px;
+  text-align: center;
+  font-size: 12px;
+  font-family: "Arial", sans-serif;
 }
