--- a/source/less/blocks/personal-info.less
+++ b/source/less/blocks/personal-info.less
@@ -2,3 +2,10 @@
   border: 0;
   padding: 0;
 }
+
+.personal-info__field {
+  @media (min-width: @desktop-width) {
+    width: 570px;
+    margin-right: 0;
+  }
+}
