--- a/source/less/blocks/provide-info.less
+++ b/source/less/blocks/provide-info.less
@@ -1,16 +1,13 @@
-.page-form__title {
-  .container();
-  width: 280px;
-  font-size: 36px;
-  line-height: 60px;
-  font-weight: 400;
-  color: #111111;
+.provide-info {
   @media (min-width: @tablet-width) {
     width: 708px;
     padding-left: 30px;
     padding-right: 30px;
   }
   @media (min-width: @desktop-width) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     width: 1220px;
     padding-left: 40px;
     padding-right: 40px;
