--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,25 +1,26 @@
 @import "../fonts/fonts.less";
 @import "./mixins.less";
+@import "./variables.less";
 @import "./blocks/base.less";
+@import "./blocks/button.less";
 @import "./blocks/visually-hidden.less";
 @import "./blocks/page-header.less";
 @import "./blocks/logo.less";
-@import "./blocks/menu__logo.less";
+@import "./blocks/menu.less";
 @import "./blocks/about-logo.less";
 @import "./blocks/slogan.less";
 @import "./blocks/food-packaging.less";
-@import "./blocks/button.less";
 @import "./blocks/page-main.less";
 @import "./blocks/dietary.less";
 @import "./blocks/features.less";
 @import "./blocks/items.less";
-@import "./blocks/feature.less";
 @import "./blocks/proof.less";
 @import "./blocks/food-price.less";
 @import "./blocks/obesity-state.less";
 @import "./blocks/toggle-control.less";
 @import "./blocks/contacts.less";
 @import "./blocks/copyright.less";
+@import "./blocks/page-footer.less";
 @import "./blocks/main-nav.less";
 @import "./blocks/page-form.less";
 @import "./blocks/form.less";
@@ -28,16 +29,12 @@
 @import "./blocks/field-container.less";
 @import "./blocks/personal-info.less";
 @import "./blocks/comment.less";
-@import "./blocks/comment__info.less";
 @import "./blocks/extra.less";
-@import "./blocks/extra__list.less";
 @import "./blocks/page-catalog.less";
 @import "./blocks/catalog-item.less";
 @import "./blocks/text-group.less";
-@import "./blocks/text-group__value.less";
-@import "./blocks/text-group__name.less";
 @import "./blocks/more.less";
-@import "./blocks/addition__title.less";
+@import "./blocks/addition.less";
 @import "./blocks/addition-list.less";
-@import "./blocks/addition-item.less";
 @import "./blocks/special-offer.less";
+@import "./blocks/filter-range.less";
