Linter errors were fixed #1

--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -35,14 +35,14 @@
     padding-top: 115px;
     padding-right: 100px;
     padding-bottom: 103px;
-    padding-left: 0px;
+    padding-left: 0;
     margin-bottom: 40px;
     width: 228px;
     outline: 1px dotted blue;
     flex-shrink: 3;
 
     &:before {
-      content: "";
+      content: '';
       position: absolute;
       top: 0;
       left: 0;
@@ -53,13 +53,13 @@
   }
 
   @media screen and (min-width: @desktop-width) {
-    padding-right: 0px;
+    padding-right: 0;
   }
-
 }
 
 .features__title {
   margin-bottom: 40px;
+
   @media screen and (min-width: @tablet-width) {
     margin-top: 40px;
     margin-bottom: 75px;
