--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,10 +1,11 @@
 .page-header {
   background-color: white;
-
 }
 
 .page-header--main {
+
   @media screen and (min-width: @desktop-width) {
+
     &:after {
       content: "";
       position: absolute;
@@ -13,7 +14,7 @@
       width: 46.7%;
       height: 645px;
       background-color: #64a83b;
-      background-image: url(../img/index-background-mobile@1x.jpg);
+      background-image: url("../img/index-background-mobile@1x.jpg");
       background-size: cover;
     }
   }
@@ -27,6 +28,7 @@
 .page-header__button {
   display: block;
   white-space: nowrap;
+
   @media screen and (min-width: @tablet-width) {
     position: absolute;
     top: 150px;
