Linter errors were fixed #2

--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -41,8 +41,8 @@
     outline: 1px dotted blue;
     flex-shrink: 3;
 
-    &:before {
-      content: '';
+    &::before {
+      content: "";
       position: absolute;
       top: 0;
       left: 0;
