--- a/source/less/blocks/filter-range.less
+++ b/source/less/blocks/filter-range.less
@@ -5,9 +5,10 @@
   position: relative;
   width: 90px;
   margin: 50px auto; /* для демо */
-  margin-bottom: 0px;
+  margin-bottom: 0; /* no unit */
   color: #ffffff;
   text-transform: uppercase;
+
   @media (min-width: @desktop-width) {
     padding-left: 0; /* no unit */
     padding-right: 0; /* no unit */
