--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -3,10 +3,8 @@
 }
 
 .page-header--main {
-
   @media screen and (min-width: @desktop-width) {
-
-    &:after {
+    &::after {
       content: "";
       position: absolute;
       top: 0;
