--- a/source/less/blocks/base.less
+++ b/source/less/blocks/base.less
@@ -1,6 +1,9 @@
 @screenWidth: 320px;
 
 body {
+  padding: 0;
+  margin: 0;
   font-family: "Oswald", "Arial", sans-serif;
+  color: #444444;
   min-width: @screenWidth;
 }
