--- a/source/less/blocks/cat-info.less
+++ b/source/less/blocks/cat-info.less
@@ -1,4 +1,10 @@
 .cat-info {
   border: 0;
   padding: 0;
+
+  div {
+    @media (min-width: @tablet-width) {
+      margin-bottom: 15px;
+    }
+  }
 }
