--- a/source/less/blocks/info.less
+++ b/source/less/blocks/info.less
@@ -1,4 +1,6 @@
 .info {
+  justify-content: space-between;
   display: flex;
-  margin-bottom: 16px;
+  margin-bottom: 12px;
+  align-items: center;
 }
