--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -1,5 +1,8 @@
 .page-form__title {
   .container();
+  padding-right: 32px;
+  margin-top: -5px;
+  margin-bottom: 22px;
   width: 280px;
   font-size: 36px;
   line-height: 60px;
@@ -10,11 +13,17 @@
     width: 708px;
     padding-left: 30px;
     padding-right: 30px;
+    font-size: 60px;
+    line-height: 60px;
+    margin-top: 50px;
   }
 
   @media (min-width: @desktop-width) {
     width: 1220px;
     padding-left: 40px;
     padding-right: 40px;
+    font-size: 60px;
+    line-height: 60px;
+    margin-top: 78px;
   }
 }
