--- a/source/less/style.less
+++ b/source/less/style.less
@@ -38,3 +38,6 @@
 @import "./blocks/addition-list.less";
 @import "./blocks/special-offer.less";
 @import "./blocks/filter-range.less";
+@import "./blocks/range-controls.less";
+@import "./blocks/social.less";
+@import "./blocks/footer-wrapper.less";
