--- a/source/less/blocks/catalog-item.less
+++ b/source/less/blocks/catalog-item.less
@@ -1,32 +1,110 @@
+.catalog-item {
+  position: relative;
+  padding-bottom: 17px;
+  display: flex;
+  flex-wrap: wrap;
+
+  @media (min-width: @tablet-width) {
+    display: block;
+    width: 324px;
+    padding-bottom: 48px;
+    margin-bottom: -5px;
+    margin-left: 0;
+    margin-right: 0;
+    background-color: #f2f2f2;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: -1px;
+    height: 1px;
+    width: 50vw;
+    background-color: #ededed;
+
+    @media (min-width: @tablet-width) {
+      width: 0;
+    }
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    z-index: 2;
+    right: 50%;
+    bottom: -1px;
+    height: 1px;
+    width: 50vw;
+    background-color: #ededed;
+
+    @media (min-width: @tablet-width) {
+      width: 0;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 245px;
+    padding-bottom: 49px;
+  }
+}
+
+.catalog-item__title-link {
+  text-decoration: none;
+}
+
 .catalog-item__button {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 108px;
-  padding-right: 108px;
+  padding-top: 9px;
+  padding-bottom: 9px;
+  padding-left: 110px;
+  padding-right: 110px;
   text-align: center;
 
   @media (min-width: @tablet-width) {
     text-align: center;
     width: 230px;
-    margin-left: 40px;
     padding-left: 94px;
     padding-right: 94px;
+    margin: 0;
+    margin-left: 38px;
+    margin-right: 24px;
   }
 
   @media (min-width: @desktop-width) {
     width: 175px;
     padding-left: 52px;
-    padding-right: 52px;
+    padding-right: 55px;
+    padding-top: 8px;
+    padding-bottom: 8px;
   }
 }
 
 .catalog-item__description {
   font-family: "Arial", "Helvetica", sans-serif;
   width: 140px;
+  font-size: 12px;
+  margin-top: 15px;
+  line-height: 1.28em;
+  font-weight: 400;
 }
 
 .catalog-item__title {
-  padding-right: 50px;
+  margin-top: 14px;
+  padding-left: 48px;
+  padding-right: 47px;
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 27px;
+  font-size: 20px;
+  line-height: 20px;
+  color: #111111;
+  font-weight: 400;
+  text-transform: uppercase;
+
+  @media (min-width: @desktop-width) {
+    padding-left: 5px;
+    padding-right: 20px;
+  }
 }
 
 .catalog-item-container {
@@ -34,27 +112,47 @@
 
   @media (min-width: @tablet-width) {
     display: block;
+    height: 100%;
   }
 }
 
 .catalog-item__link {
+  width: 140px;
   text-decoration: none;
   font-size: 16px;
   color: black;
+
+  @media (min-width: @tablet-width) {
+    width: 100%;
+    height: 293px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(to bottom, #ffffff 50%, #f2f2f2 50%);
+  }
 }
 
 .catalog-item__text {
-  margin-bottom: 23px;
+  margin-bottom: 18px;
+  width: 140px;
 
   @media (min-width: @tablet-width) {
-    width: 240px;
-    padding-left: 40px;
-    padding-right: 40px;
-    margin-bottom: 35px;
+    width: 250px;
+    padding-left: 39px;
+    padding-right: 35px;
+    margin-bottom: 40px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 183px;
+    margin-top: 10px;
   }
 }
 
 .catalog-item__info {
-  width: 165px;
-  margin-bottom: 35px;
+  width: 280px;
+
+  @media (min-width: @tablet-width) {
+    width: auto;
+  }
 }
