--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -4,11 +4,21 @@
 }
 
 .copyright__link {
-  color: #444444;
   text-decoration: none;
+  font-size: 16px;
+  line-height: 16px;
+  padding-top: 5px;
+  font-family: "Arial", sans-serif;
+  color: #444444;
+
+  @media (min-width: @tablet-width) {
+    padding-right: 20px;
+  }
 }
+
 
 .copyright__logo {
   width: 28px;
   height: 36px;
+  margin-top: -5px;
 }
