--- a/source/less/blocks/filter-range.less
+++ b/source/less/blocks/filter-range.less
@@ -1,70 +1,27 @@
 .filter-range {
   display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  position: relative;
-  width: 90px;
-  margin: 50px auto; /* для демо */
-  margin-bottom: 0; /* no unit */
-  color: #ffffff;
-  text-transform: uppercase;
+  justify-content: space-between;
+  margin-top: 25px;
+  margin-right: 30px;
+  margin-left: 30px;
+  width: 280px;
+  margin-left: auto;
+  margin-right: auto;
+
+  @media (min-width: @tablet-width) {
+    width: 100%;
+    padding-top: 400px;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(to right, #f2f2f2 50%, #eaeaea 50%);
+    padding-bottom: 73px;
+  }
 
   @media (min-width: @desktop-width) {
-    padding-left: 0; /* no unit */
-    padding-right: 0; /* no unit */
-    margin-left: 50%;
-    padding-bottom: 0; /* no unit */
-    outline: 1px solid red;
-    margin-right: 0; /* no unit */
-  }
-}
-
-.range-controls {
-  position: relative;
-}
-
-.range-controls .scale {
-  height: 2px;
-
-  background: rgba(255, 255, 255, 0.3);
-}
-
-.range-controls .bar {
-  width: 100%;
-  height: 2px;
-
-  background: grey;
-}
-
-.range-toggle {
-  position: absolute;
-  top: -9px;
-
-  width: 4px;
-  height: 4px;
-
-  background: green;
-  border: 8px solid #ffffff;
-  border-radius: 50%;
-  box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
-  cursor: pointer;
-}
-
-.range-toggle:hover {
-  background: #1c4f80;
-}
-
-.range-toggle-min {
-  left: 40px;
-}
-
-.filter-wrapper {
-  @media (min-width: @tablet-width) {
-    padding-top: 365px;
-    background-color: #f2f2f2;
-  }
-
-  @media min-width: @desktop-width) {
-    width: 618px;
+    width: auto;
+    margin-left: 34px;
+    margin-right: 0;
+    padding-top: 367px;
+    margin-top: 0;
   }
 }
