--- a/source/less/blocks/food-packaging.less
+++ b/source/less/blocks/food-packaging.less
@@ -1,10 +1,21 @@
 .food-packaging {
-  margin-top: -70px;
+  margin-top: -150px;
   text-align: center;
   background-size: cover;
 
-  @media screen and (min-width: @tablet-width) {
-    margin-top: -200px;
-    margin-left: 180px;
+  @media (min-width: @tablet-width) {
+    margin-top: -90px;
+    margin-left: 120px;
+    width: 620px;
+    height: 600px;
+  }
+
+  @media (min-width: @desktop-width) {
+    position: absolute;
+    z-index: 2;
+    left: 405px;
+    top: 133px;
+    width: 514px;
+    height: auto;
   }
 }
