--- a/source/less/blocks/slogan.less
+++ b/source/less/blocks/slogan.less
@@ -6,6 +6,7 @@
   text-align: center;
 
   @media (min-width: @tablet-width) {
+    padding-top: 20px;
     position: relative;
     width: @tablet-width;
     text-align: left;
@@ -13,10 +14,11 @@
     color: black;
     margin-left: auto;
     margin-right: auto;
+    margin-top: -30px;
   }
 
   @media (min-width: @desktop-width) {
-    min-height: 645px;
+    min-height: 582px;
     width: @desktop-width;
   }
 }
@@ -34,16 +36,28 @@
 }
 
 .slogan__title {
+  margin: 0;
+  margin-left: auto;
+  margin-right: auto;
+  width: 280px;
   font-size: 36px;
   font-style: normal;
   font-weight: normal;
   line-height: 40px;
-  padding-left: 36px;
-  padding-right: 36px;
-  padding-top: 40px;
+  padding-top: 25px;
 
-  @media screen and (min-width: @tablet-width) {
-    padding: 0;
+  @media (min-width: @tablet-width) {
+    width: 500px;
+    font-size: 60px;
+    line-height: 60px;
+    margin-left: 115px;
+    margin-top: 25px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 7px;
+    padding-top: 72px;
+    text-align: left;
   }
 }
 
@@ -54,10 +68,18 @@
   line-height: 18px;
   padding-left: 59px;
   padding-right: 59px;
-  margin-top: 18px;
+  margin-top: 20px;
   text-transform: uppercase;
 
-  @media screen and (min-width: @tablet-width) {
+  @media (min-width: @tablet-width) {
     padding: 0;
+    font-size: 20px;
+    margin-left: 115px;
+    margin-top: 40px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 5px;
+    margin-top: 43px;
   }
 }
