--- a/source/less/blocks/text-group.less
+++ b/source/less/blocks/text-group.less
@@ -1,7 +1,18 @@
 .text-group {
   display: flex;
-  margin-bottom: 10px;
   justify-content: space-between;
+
+  @media (min-width: @tablet-width) {
+    width: 245px;
+    font-size: 16px;
+    padding-bottom: 8px;
+    margin-bottom: 8px;
+    border-bottom: 1px solid #cdcdcd;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 167px;
+  }
 }
 
 .text-group__value {
