--- a/source/less/blocks/dietary.less
+++ b/source/less/blocks/dietary.less
@@ -96,7 +96,7 @@
     left: 10px;
     width: 35px;
     height: 49px;
-    background-image: url(../img/icon-cat-slim.svg);
+    background-image: url("../img/icon-cat-slim.svg");
     background-repeat: no-repeat;
 
     @media (min-width: @tablet-width) {
@@ -123,7 +123,7 @@
     left: -10px;
     width: 67px;
     height: 28px;
-    background-image: url(../img/icon-cat-pro.svg);
+    background-image: url("../img/icon-cat-pro.svg");
     background-repeat: no-repeat;
 
     @media (min-width: @tablet-width) {
@@ -141,8 +141,6 @@
     }
   }
 }
-
-
 
 .dietary__info {
   margin-top: 12px;
@@ -172,11 +170,11 @@
 }
 
 .dietary:nth-child(2) {
-  .dietary__title {
 
+  .dietary__title {
     @media (min-width: @tablet-width) {
-    padding-top: 85px;
-  }
+      padding-top: 85px;
+    }
 
     @media (min-width: @desktop-width) {
       padding-top: 79px;
@@ -186,6 +184,7 @@
   .dietary__info {
     margin-top: 8px;
   }
+
   .dietary__link-to {
     margin-top: 40px;
 
