--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,5 +1,6 @@
 .page-main {
   background-color: white;
+
   @media (min-width: @tablet-width) {
     margin-top: -10px;
   }
@@ -27,7 +28,7 @@
     background-color: #ededed;
 
     @media (min-width: @tablet-width) {
-      height: 0px;
+      height: 0;
     }
   }
 
@@ -41,7 +42,7 @@
     background-color: #ededed;
 
     @media (min-width: @tablet-width) {
-      height: 0px;
+      height: 0;
     }
   }
 
@@ -79,7 +80,6 @@
     padding-top: 61px;
     padding-left: 40px;
     padding-right: 40px;
-    display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
   }
