--- a/source/less/blocks/personal-info.less
+++ b/source/less/blocks/personal-info.less
@@ -10,7 +10,6 @@
 }
 
 .personal-info__field {
-
   @media (min-width: @tablet-width) {
     margin-left: 40px;
 
@@ -20,7 +19,7 @@
     }
 
     label {
-      margin-right: 17px
+      margin-right: 17px;
     }
   }
 
