--- a/source/less/blocks/proof.less
+++ b/source/less/blocks/proof.less
@@ -70,7 +70,6 @@
     padding-top: 58px;
     padding-right: 115px;
   }
-
 }
 
 .proof__group {
@@ -88,7 +87,6 @@
 }
 
 .proof__img {
-
   @media screen and (min-width: @tablet-width) {
     position: absolute;
     left: 50%;
@@ -145,6 +143,7 @@
   font-size: 24px;
   font-weight: lighter;
   text-align: center;
+
   @media screen and (min-width: @tablet-width) {
     font-size: 30px;
     line-height: 27px;
@@ -203,7 +202,7 @@
   }
 }
 
-.proof__case-description::nth-child(2) {
+.proof__case-description:nth-child(2) {
   padding-left: 10px;
 }
 
