--- a/source/less/blocks/special-offer.less
+++ b/source/less/blocks/special-offer.less
@@ -16,7 +16,7 @@
     margin-left: -27px;
     width: 55px;
     height: 60px;
-    background-image: url(../img/icon-gift.svg);
+    background-image: url("../img/icon-gift.svg");
     background-repeat: no-repeat;
 
     @media (min-width: @tablet-width) {
@@ -73,7 +73,7 @@
     padding: 0;
     position: relative;
     top: -17px;
-    left: 0px;
+    left: 0;
     text-align: center;
   }
 }
