--- a/source/less/blocks/addition.less
+++ b/source/less/blocks/addition.less
@@ -31,7 +31,7 @@
 
     @media (min-width: @tablet-width) {
       padding-left: 37px;
-      padding-right: 0px;
+      padding-right: 0;
     }
 
     @media (min-width: @desktop-width) {
@@ -46,7 +46,7 @@
     position: absolute;
     z-index: 1;
     width: 100vw;
-    left: 0px;
+    left: 0;
     top: 19px;
 
     @media (min-width: @desktop-width) {
@@ -58,20 +58,19 @@
     white-space: nowrap;
     font-size: 36px;
     line-height: 36px;
-    padding-left: 0px;
+    padding-left: 0;
     margin-bottom: 77px;
 
     &::before {
       content: "";
       height: 3px;
-      width: 50px;
       flex-grow: 1;
       background-color: #68b738;
       position: absolute;
       z-index: 1;
       width: 100vw;
       top: 19px;
-      right: 0px;
+      right: 0;
 
       @media (min-width: @desktop-width) {
         top: 22px;
@@ -79,12 +78,10 @@
     }
   }
 
-
-    @media (min-width: @desktop-width) {
-      margin-left: -25px;
-      margin-bottom: 79px;
-    }
-
+      @media (min-width: @desktop-width) {
+        margin-left: -25px;
+        margin-bottom: 79px;
+      }
 }
 
 .addition-item__description {
@@ -110,7 +107,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-top: 0px;
+    margin-top: 0;
     justify-content: space-between;
     padding-top: 9px;
     padding-left: 104px;
@@ -157,8 +154,9 @@
 
 .addition-item {
   margin-top: 37px;
+
   @media (min-width: @tablet-width) {
-    margin-top: 0px;
+    margin-top: 0;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
