--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -17,7 +17,7 @@
 
   @media (min-width: @desktop-width) {
     width: 185px;
-    padding-top: 0px;
+    padding-top: 0;
     padding-left: 35px;
     padding-right: 32px;
     margin-top: 28px;
@@ -59,7 +59,6 @@
 
   @media (min-width: @desktop-width) {
     position: absolute;
-    align-items: flex-start;
     width: 511px;
     background-color: white;
     justify-content: space-around;
@@ -72,6 +71,7 @@
 
 .contacts__info--form {
   margin-bottom: 16px;
+  align-items: stretch;
 }
 
 .contacts__address {
@@ -110,8 +110,4 @@
   @media (min-width: @desktop-width) {
     text-align: left;
   }
-}
-
-.contacts__info--form {
-  align-items: stretch;;
 }
