--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -66,24 +66,24 @@
     padding-right: 0;
     margin-right: 2px;
     width: 244px;
-    padding-top: 121px
+    padding-top: 121px;
   }
 }
 
 .features__item--healthy::before {
-    background-image: url(../img/advantage-leaf@1x.png);
+  background-image: url("../img/advantage-leaf@1x.png");
 }
 
 .features__item--cooking::before {
-    background-image: url("../img/advantage-powder@1x.png");
+  background-image: url("../img/advantage-powder@1x.png");
 }
 
 .features__item--apply::before {
-    background-image: url("../img/advantage-dining@1x.png");
+  background-image: url("../img/advantage-dining@1x.png");
 }
 
 .features__item--quick::before {
-    background-image: url("../img/advantage-clock@1x.png");
+  background-image: url("../img/advantage-clock@1x.png");
 }
 
 .features__item:nth-child(3),
@@ -94,12 +94,12 @@
 }
 
 .features__title {
-    margin-top: -6px;
-    margin-bottom: 30px;
-    font-size: 35px;
-    line-height: 60px;
-    font-weight: 400;
-    color: #111111;
+  margin-top: -6px;
+  margin-bottom: 30px;
+  font-size: 35px;
+  line-height: 60px;
+  font-weight: 400;
+  color: #111111;
 
   @media (min-width: @tablet-width) {
     margin-top: 42px;
