--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -31,7 +31,7 @@
   margin-top: 22px;
   padding-top: 16px;
   padding-bottom: 14px;
-  margin-bottom: 0px;
+  margin-bottom: 0;
 
   @media (min-width: @tablet-width) {
     border: 1px solid #ededed;
@@ -52,7 +52,7 @@
     padding-left: 43px;
   }
 
-  &:before {
+  &::before {
     content: "";
     position: absolute;
     right: 50%;
@@ -65,9 +65,15 @@
       width: 0;
       height: 0;
     }
+
+    .field-container {
+      @media (min-width: @tablet-width) {
+        margin-bottom: 5px;
+      }
+    }
   }
 
-  &:after {
+  &::after {
     content: "";
     position: absolute;
     left: 50%;
@@ -83,28 +89,19 @@
   }
 }
 
-.form__diet-choice {
-  .field-container {
-    @media (min-width: @tablet-width) {
-      margin-bottom: 5px;
-    }
+.form__label {
+  margin-right: 18px;
+  font-size: 16px;
+  font-weight: lighter;
+  text-transform: uppercase;
+  padding-top: 8px;
+  padding-bottom: 10px;
+  word-wrap: nowrap;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    margin-right: 20px;
   }
-}
-
-  .form__label {
-    margin-right: 18px;
-    font-size: 16px;
-    font-weight: lighter;
-    text-transform: uppercase;
-    padding-top: 8px;
-    padding-bottom: 10px;
-    word-wrap: nowrap;
-
-    @media (min-width: @tablet-width) {
-      font-size: 20px;
-      margin-right: 20px;
-    }
-
 
   @media (min-width: @desktop-width) {
     margin-right: 24px;
@@ -125,13 +122,12 @@
   margin-top: 27px;
   text-transform: uppercase;
   font-size: 14px;
-  line-height: 1.30em;
+  line-height: 1.3em;
 
   @media (min-width: @tablet-width) {
     width: 331px;
     font-size: 20px;
     line-height: 30px;
-    width: 331px;
     padding-left: 40px;
     margin-top: 56px;
     margin-bottom: 63px;
@@ -140,7 +136,7 @@
   @media (min-width: @desktop-width) {
     padding-right: 600px;
     margin-bottom: 66px;
-    padding-left: 0px;
+    padding-left: 0;
     margin-top: 30px;
   }
 }
@@ -158,7 +154,7 @@
 
   @media (min-width: @desktop-width) {
     width: 570px;
-    padding-left: 0px;
+    padding-left: 0;
     margin-left: -114px;
   }
 }
@@ -207,26 +203,26 @@
 }
 
 .form__radio + .form__label::before {
-    content: "";
-    position: absolute;
-    top: 5px;
-    left: 0;
-    height: 28px;
-    width: 28px;
-    border-radius: 50%;
-    border: 1px solid #cdcdcd;
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 0;
+  height: 28px;
+  width: 28px;
+  border-radius: 50%;
+  border: 1px solid #cdcdcd;
 
-    @media (min-width: @tablet-width) {
-      top: 3px;
-      left: -14px;
-      height: 38px;
-      width: 38px;
-    }
+  @media (min-width: @tablet-width) {
+    top: 3px;
+    left: -14px;
+    height: 38px;
+    width: 38px;
+  }
 
-    @media (min-width: @desktop-width) {
-      top: 3px;
-      left: -16px;
-    }
+  @media (min-width: @desktop-width) {
+    top: 3px;
+    left: -16px;
+  }
 }
 
 .form__button {
@@ -264,9 +260,8 @@
     width: 600px;
     white-space: nowrap;
     padding-top: 47px;
-    padding-left: 0px;
+    padding-left: 0;
     margin-bottom: 79px;
-
   }
 
   &::before {
@@ -290,14 +285,13 @@
     &::after {
       content: "";
       height: 3px;
-      width: 50px;
       flex-grow: 1;
       background-color: #68b738;
       position: absolute;
       z-index: 1;
       width: 100vw;
       top: 62px;
-      right: 0px;
+      right: 0;
     }
   }
 
@@ -305,9 +299,7 @@
     width: 1220px;
     margin-left: -41px;
   }
-}
 
-.form__title {
   span {
     max-width: 190px;
     padding-right: 11px;
@@ -325,6 +317,7 @@
 
 .form__personal-info {
   position: relative;
+
   &::before {
     content: "";
     position: absolute;
@@ -365,7 +358,6 @@
 }
 
 .form__cat-info {
-
   @media (min-width: @tablet-width) {
     margin-left: 40px;
     margin-right: 40px;
@@ -385,25 +377,25 @@
 }
 
 .form__checkbox + .form__label {
-    position: relative;
-    display: block;
-    padding-left: 45px;
-    cursor: pointer;
+  position: relative;
+  display: block;
+  padding-left: 45px;
+  cursor: pointer;
 }
 
 .form__checkbox + .form__label::before {
-    content: "";
-    position: absolute;
-    top: 7px;
-    left: 0;
-    height: 28px;
-    width: 28px;
-    border: 1px solid #cdcdcd;
+  content: "";
+  position: absolute;
+  top: 7px;
+  left: 0;
+  height: 28px;
+  width: 28px;
+  border: 1px solid #cdcdcd;
 
-    @media (min-width: @tablet-width) {
-      top: 4px;
-      left: -13px;
-      height: 38px;
-      width: 38px;
-    }
+  @media (min-width: @tablet-width) {
+    top: 4px;
+    left: -13px;
+    height: 38px;
+    width: 38px;
+  }
 }
