--- a/source/less/blocks/more.less
+++ b/source/less/blocks/more.less
@@ -1,6 +1,6 @@
 .more__promo-title {
   margin-top: 25px;
-  margin-bottom: 0px;
+  margin-bottom: 0;
   font-size: 16px;
   line-height: 20px;
   color: #111111;
