--- a/source/less/blocks/page-catalog.less
+++ b/source/less/blocks/page-catalog.less
@@ -105,7 +105,7 @@
   @media (min-width: @desktop-width) {
     position: relative;
     width: 1220px;
-    padding-left: 0px;
+    padding-left: 0;
   }
 }
 
