--- a/source/less/blocks/menu.less
+++ b/source/less/blocks/menu.less
@@ -10,8 +10,7 @@
   text-align: center;
 
   &--active {
-
-    &:after {
+    &::after {
       content: "";
       position: absolute;
       bottom: 14px;
